[tool.poetry]
name = "vscode"
version = "0.1.0"
description = "My first ML project"
authors = ["Lazzaro Bignami <lazzaro.bignami@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
